--- a/proxy/public/index.html
+++ b/proxy/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="/style.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
     <title>FEC Demo</title>
   </head>
   <body>
@@ -13,13 +14,6 @@
       <div id="Bodyalbum"></div>
       <div id="relatedartists"></div>
     </div>
-    <!-- <script src="http://localhost:3001/app.js"></script> -->
-    <script src="http://ec2-18-191-230-44.us-east-2.compute.amazonaws.com/app.js" crossorigin="anonymous"></script>
-    <!-- <script src="http://localhost:3003/bundle.js"></script> -->
-    <script src="http://ec2-18-191-178-115.us-east-2.compute.amazonaws.com/bundle.js" crossorigin="anonymous"></script>
-    <!-- <script src="http://localhost:3242/app.js"></script> -->
-    <script src="http://ec2-3-17-177-153.us-east-2.compute.amazonaws.com/bodyalbum.js" crossorigin="anonymous"></script>
-    <!-- <script src="http://localhost:3100/app.js"></script> -->
-    <script src="http://ec2-34-227-148-64.compute-1.amazonaws.com/app.js" crossorigin="anonymous"></script>
+    <script src="http://localhost:3001/bundle.js"></script>
   </body>
 </html>
